header spacing fixed

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,10 @@
 .header {
     background-color: theme-color("accent-2");
 
+    @include if-tablet {
+        padding: 0 spacer(small-xs);
+    }
+
     &__box {
         align-items: center;
         display: flex;
@@ -11,14 +15,12 @@
         @include if-tablet {
             height: 50px;
             justify-content: flex-end;
-            padding-left: spacer(small-l);
         }
     }
 
     &__menu-icon {
         background-image: url('/assets/img/menuIcon.png');
         height: 14px;
-        margin-left: spacer(small-l);
         margin-right: auto;
         width: 16px;
 
@@ -33,12 +35,10 @@
         background-size: cover;
         border-radius: radius(round);
         margin-left: auto;
-        margin-right: 16px;
 
 
         @include if-tablet {
             margin-left: 0;
-            margin-right: spacer(small-xl);
         }
     }
 }
